syntax = 'proto3';

package payment;

/* Service Handlers (One per controller) */
service PaymentService {
    // rpc viewAllCustomer (param) returns (ListCustomer); //Later
    rpc retrieveStripeCustomer (CustomerID) returns (CustomerCards);
    rpc createStripeAccount(StripeCustomer) returns (CreatedCustomer);
}


/* CREATE CUSTOMER ACCOUNT DS */
message StripeCustomer {
    required string name = 1;
    required string email = 2;
}

message CreatedCustomer {
    string id = 1;
}

/* END CREATE CUSTOMER ACCOUNT */

/* RETRIEVE CUSTOMER CARDS DS */
message CustomerID {
    string id = 1;
}

message CustomerCards {
    repeated Cards cards = 1;
}

message Cards {
    string cards = 1;
    string cvc_check = 2;
    string id = 3;
    string brand = 4;
    string country = 5;
    int32 exp_month = 6;
    int32 exp_year = 7;
    string last4 = 8;
}

/* END - RETRIEVE CUSTOMER CARDS DS */


/*  VIEW ALL STRIPE CUSTOMERS DS */
message param {
    string maybe = 1;
}

message ListCustomer {
    repeated Customer customers = 1;
}

message Customer {
    string object = 1;
    string url = 2;
    bool has_more = 3;
    repeated StripeCustomerInfo data = 4;
}

message StripeCustomerInfo {
    string id = 1;
    string object = 2;
}
